更新main.py以增强HTML解析功能，添加错误处理和输入验证，确保提取论文信息的稳定性。同时，更新README_EN.md和README.md以提供更清晰的项目概述和使用说明，新增requirements.txt以列出项目依赖项，确保用户能够顺利安装和运行项目。

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,8 @@ requires-python = ">=3.11"
 dependencies = [
     "dict2xml>=1.7.6",
     "mcp[cli]>=1.9.4",
+    "pymupdf>=1.26.1",
+    "httpx>=0.28.0",
+    "pyyaml>=6.0",
+    "beautifulsoup4>=4.12.0",
 ]
